# Trabalho-ED

./: .gitignore  AlteracaoGray1.txt  AlteracaoGray2.txt  AlteracaoGray3.txt  AlteracaoGray4.txt  AlteracaoGray5.txt  AlteracaoRGB1.txt  AlteracaoRGB2.txt  AlteracaoRGB3.txt  AlteracaoRGB4.txt  AlteracaoRGB5.txt  AlteracaoRGB6.txt  AlteracaoRGB7.txt  Dockerfile  image.c  image.h  image_utils.py  main.c  meson.build  transposeGray.txt
.vscode_exemple/: launch.json  tasks.json
image/: image.c  image.h  meson.build
src/image/: meson.build
src/image/imgGray/: imgGray.c  imgGray.h  meson.build
src/image/imgRGB/: imgRGB.c  imgRGB.h  meson.build
src/image/imgStruct/: imgStruct.h  meson.build
src/ui/: meson.build
src/ui/uiGray/: meson.build  uiGray.c  uiGray.h
src/ui/uiHistorico/: meson.build  uiHistorico.c  uiHistorico.h
src/ui/uiMain/: meson.build  uiMain.c  uiMain.h
src/ui/uiRGB/: meson.build  uiRGB.c  uiRGB.h
utils/: input_image_example_Gray.txt
